--- a/public/command-center/index.html
+++ b/public/command-center/index.html
@@ -1,16 +1,15 @@
 <html ng-app="myApp">
 <head>
     <meta charset="utf8"/>
-    <base href="/"/>
     <title>Дозор</title>
-    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="./css/bootstrap.min.css"/>
     <style type="text/css">
         body {
             padding-top: 70px
         }
     </style>
-    <link rel="stylesheet" href="/css/bootstrap-responsive.min.css"/>
-    <link rel="stylesheet" href="/css/app.css"/>
+    <link rel="stylesheet" href="./css/bootstrap-responsive.min.css"/>
+    <link rel="stylesheet" href="./css/app.css"/>
 </head>
 <body ng-init="loadScopes()">
 <div class="navbar navbar-inverse navbar-fixed-top">
@@ -47,14 +46,14 @@
         </div>
     </div>
 </div>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-<script src="js/command-center/libs/bootstrap.min.js"></script>
-<script src="js/command-center/libs/angular/angular.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="./js/libs/bootstrap.min.js"></script>
+<script src="./js/libs/angular/angular.js"></script>
 <script src="/socket.io/socket.io.js"></script>
-<script src="js/command-center/app.js"></script>
-<script src="js/command-center/services/services.js"></script>
-<script src="js/command-center/controllers/controllers.js"></script>
-<script src="js/command-center/services/filters.js"></script>
-<script src="js/command-center/directives/directives.js"></script>
+<script src="./js/app.js"></script>
+<script src="./js/services/services.js"></script>
+<script src="./js/controllers/controllers.js"></script>
+<script src="./js/services/filters.js"></script>
+<script src="./js/directives/directives.js"></script>
 </body>
 </html>
