--- a/public/client/index.html
+++ b/public/client/index.html
@@ -1,9 +1,8 @@
 <html>
 <head>
     <meta charset="utf8"/>
-    <base href="/"/>
     <title>Связь с командным центром</title>
-    <link rel="stylesheet" href="/css/client/client.css"/>
+    <link rel="stylesheet" href="css/client.css"/>
 </head>
 <body>
 <div class="chat_box">
@@ -17,7 +16,7 @@
 </div>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
-<script src="js/client/client.js"></script>
+<script src="js/client.js"></script>
 <script>
 
     function getChartRoomNumber() {
@@ -25,7 +24,7 @@
         return clientUrl[clientUrl.length-1];
     }
 
-    var socket = io.connect(getChartRoomNumber());
+    var socket = io.connect("/" + getChartRoomNumber());
     var $chatBox = $('.chat_box');
     var $messageText = $('.message_text');
 
