removed chat entity + last message support

--- a/public/client/index.html
+++ b/public/client/index.html
@@ -21,7 +21,7 @@
 
     var roomId = '6e07dd44a0c02fa52531eae1285b5f19';
 
-    var socket = io.connect("/" + roomId, {query: "username=test"});
+    var socket = io.connect("/" + roomId, {query: "username=test&lastMessageId=54b7b22b444735c4032300b4"});
     var $chatBox = $('.chat_box');
     var $messageText = $('.message_text');
 
